--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+video/*.mp4 filter=lfs diff=lfs merge=lfs -text
+image/*.png filter=lfs diff=lfs merge=lfs -text
