--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 video/*.mp4 filter=lfs diff=lfs merge=lfs -text
 image/*.png filter=lfs diff=lfs merge=lfs -text
+styles/video/*.mp4 filter=lfs diff=lfs merge=lfs -text
+styles/**/*.mp4 filter=lfs diff=lfs merge=lfs -text
+styles/**/*.png filter=lfs diff=lfs merge=lfs -text
