--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,16 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+
+# Treat images as binary
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.webp binary
+
+# Treat videos as binary
+*.mp4 binary
+*.mov binary
+*.avi binary
+*.mkv binary
+*.png binary
